Fix: Scrollbar is visible in composer beneath formatting options

--- a/gmail/style.css
+++ b/gmail/style.css
@@ -971,7 +971,7 @@ html.simpl .aSs > .aSt {
 	left: calc(50vw - 450px) !important;
 }
 html.simpl .aSs .aDg > .aDj {
-	width: 865px !important;
+	width: 867px !important;
 	left: calc(50vw - 435px) !important;
 }
 
